			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.02q: *********************************

IMP: (06/28/05, GVG) Reorganizing again JMF and Java3D classes to create different plugins

BUG: (06/29/05, SMR) Cross-library copy doesn't copy schematic when icon gets copied (Bug #408).
FIX: Made cross-library copy more sensible: "copy subcells" always forces "copy all related views",
     copies schematic if icon gets copied recursively.

************************* Version 8.02p: *********************************

BUG: (06/28/05, GVG) DRC resolution check for active arcs must be done before they are cropped.
FIX: Move resolution code before Quick.cropActiveArc() in checkArcInst.

BUG: (06/28/05, SMR) Autorouting reports arcs that it does not create (Bug #413).
FIX: In AutoStitch.runAutoStitch(), only ignore wires that are already directly connected.

BUG: (06/28/05, SMR) Pad frame generation handles "gap" incorrectly (Bug #412).
FIX: Cleaned-up code.  Also now use "cell" instead of "facet" in array file.

BUG: (06/27/05, SMR) "Select all" should not select the cell center because
     it is never desired, and often causes unexpected results.
FIX: Disallow selection of cell center in "select all".

BUG: (06/27/05, SMR) Grid doesn't display when editing down-in-place (Bug #411).
FIX: Fixed grid code to handle in-place orientation.

IMP: (06/28/05, GVG) Pref.exportPrefs(String fileName) public again due to the regressions.
Menu name change: new: Window->3D Window-> 3D View, old:Window->3D View->3D Window

IMP: (06/28/05, GVG) Moving Sun's proprietary to JMFAndJ3D plugin (ex JMF plugin).
3D axes are only available if JMFAndJ3D plugin is available.
Same for J3DQueryProperties.queryHardwareAcceleration function.
Changes in build.xml to create JMFAndJ3D jar.

BUG: (06/28/05, GVG) Previous bug fix for "Repeat Last Action" didn't work (Bug #246).
FIX: Solution based on menu name.
