@@ -4,6 +4,9 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.02q: *********************************
 
+BUG: (06/29/05, SMR) Cannot mention "bugzilla" in released version.
+FIX: In ActivityLogger.java, removed mention of "bugzilla" for released versions.
+
 IMP: (06/28/05, GVG) Reorganizing again JMF and Java3D classes to create different plugins
 
 BUG: (06/29/05, SMR) Cross-library copy doesn't copy schematic when icon gets copied (Bug #408).
